--- a/page5.html
+++ b/page5.html
@@ -57,11 +57,11 @@
 						<a class="nav-link link text-black display-4" href="index.html"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Нүүр хуудас</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-black text-primary display-4" href="page7.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-layers mbr-iconfont mbr-iconfont-btn"></span>Бидний тухай</a>
+						<a class="nav-link link text-black text-primary display-4" href="index.html#article02-3y" aria-expanded="false"><span class="mobi-mbri mobi-mbri-layers mbr-iconfont mbr-iconfont-btn"></span>Бидний тухай</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-black display-4" href="index.html#features025-1p" aria-expanded="false"><span class="mobi-mbri mobi-mbri-bulleted-list mbr-iconfont mbr-iconfont-btn"></span>Үйлчилгээ</a>
-					</li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#clients-3d"><span class="mobi-mbri mobi-mbri-numbered-list mbr-iconfont mbr-iconfont-btn"></span>Үнийн санал</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="tel:+97688103329"><span class="mobi-mbri mobi-mbri-pin mbr-iconfont mbr-iconfont-btn"></span>Холбоо барих</a></li></ul>
+						<a class="nav-link link text-black text-primary display-4" href="index.html#features01-3v" aria-expanded="false"><span class="mobi-mbri mobi-mbri-bulleted-list mbr-iconfont mbr-iconfont-btn"></span>Үйлчилгээ</a>
+					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#pricing01-3q"><span class="mobi-mbri mobi-mbri-numbered-list mbr-iconfont mbr-iconfont-btn"></span>Үнийн санал</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="tel:+97688103329"><span class="mobi-mbri mobi-mbri-pin mbr-iconfont mbr-iconfont-btn"></span>Холбоо барих</a></li></ul>
 				<div class="icons-menu">
 					<a class="iconfont-wrapper" href="https://www.facebook.com/profile.php?id=61580026916753&sk=about" target="_blank">
 						<span class="p-2 mbr-iconfont socicon-facebook socicon" style="color: rgb(39, 148, 221); fill: rgb(39, 148, 221);"></span>
@@ -168,7 +168,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="OVC769nBa8s4QHcvY4v7MbYj+qT85fU8CrcTlzX0EgRr+naTsxs/qeiJidApVXyulq6S3ICH6SGWrPxuGhJAjE/Hv49dx4O2wsh4jm+PQbJD7xElC5IRiu6JIhK1T9Bl">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ufS4RJbsiahSv9CUbm+oFeEpS0Ch7+kQ5lketiBJEvvAuGGqh2OgdfGMS9dmg/Fs9vbfkVFl+yso9lHb+zrJuYaqEQLfdpTTH/m+PTJ5eYxsEogoXxFoMClAlmpgS9Cj">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Илгээсэн баярлалаа! Бид эргэн холбогдох болно.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -221,11 +221,11 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-7">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB7QWkvlxV39ZsyKvhZRjPGVqlJFvxxNkw&amp;q=WV24+5M9 Техник спортын төв, Улаанбаатар" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBQ55g-IgRRgXrd803PTWDTb7kd6aAitNQ&amp;q=WV24+5M9 Техник спортын төв, Улаанбаатар" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/980983" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">AI Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/980983" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag & Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
