--- a/page7.html
+++ b/page7.html
@@ -58,11 +58,11 @@
 						<a class="nav-link link text-black display-4" href="index.html"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Нүүр хуудас</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-black text-primary display-4" href="page7.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-layers mbr-iconfont mbr-iconfont-btn"></span>Бидний тухай</a>
+						<a class="nav-link link text-black text-primary display-4" href="index.html#article02-3y" aria-expanded="false"><span class="mobi-mbri mobi-mbri-layers mbr-iconfont mbr-iconfont-btn"></span>Бидний тухай</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-black display-4" href="index.html#features025-1p" aria-expanded="false"><span class="mobi-mbri mobi-mbri-bulleted-list mbr-iconfont mbr-iconfont-btn"></span>Үйлчилгээ</a>
-					</li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#clients-3d"><span class="mobi-mbri mobi-mbri-numbered-list mbr-iconfont mbr-iconfont-btn"></span>Үнийн санал</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="tel:+97688103329"><span class="mobi-mbri mobi-mbri-pin mbr-iconfont mbr-iconfont-btn"></span>Холбоо барих</a></li></ul>
+						<a class="nav-link link text-black text-primary display-4" href="index.html#features01-3v" aria-expanded="false"><span class="mobi-mbri mobi-mbri-bulleted-list mbr-iconfont mbr-iconfont-btn"></span>Үйлчилгээ</a>
+					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#pricing01-3q"><span class="mobi-mbri mobi-mbri-numbered-list mbr-iconfont mbr-iconfont-btn"></span>Үнийн санал</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="tel:+97688103329"><span class="mobi-mbri mobi-mbri-pin mbr-iconfont mbr-iconfont-btn"></span>Холбоо барих</a></li></ul>
 				<div class="icons-menu">
 					<a class="iconfont-wrapper" href="https://www.facebook.com/profile.php?id=61580026916753&sk=about" target="_blank">
 						<span class="p-2 mbr-iconfont socicon-facebook socicon" style="color: rgb(39, 148, 221); fill: rgb(39, 148, 221);"></span>
@@ -236,7 +236,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/980983" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/980983" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-maker.html">Best AI Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
